# quick-codes

./: nqueen.pl
asm/: helloworld.asm  main.asm
cpp/: Binary_search_algorithm.cpp  Fork  Stopwatch.h  addrPointerToString.cpp  binary_search_algorithm.cpp  client_mongodb.cpp  combinationGenerator.h  dijkstra-bgl.cpp  factorielle.cpp  filerepair.cpp  fork.cpp  hexpatch  hexpatch.cpp  nqueen.cpp  randomNumber.cpp  scatterplot.cpp  shellcode-run.cpp  version.cpp
cpp/binary_search_trees/: CMakeLists.txt
cpp/binary_search_trees/sources/: binarySearchTrees.hpp  main.cpp  node.hpp
cpp/binary_search_trees/tests-unitaires/: unitTest.cpp  unitTest_binarySearchTrees.hpp  unitTest_node.hpp
cpp/copyfile/: Makefile  copyfile.cpp  copyfile.h
cpp/helloWorld/: CMakeLists.txt  Makefile  README  main.cpp
cpp/helloWorld/sources/: UnitTest.cpp  UnitTest_pile.h  macro.h  main.cpp  pile.h  pile.hpp
cpp/helloWorld/tests/: tests.cpp
cpp/helloWorld/tests-unitaires/: UnitTest.cpp  UnitTest_pile.h  UnitTest_pile.hpp
cpp/subset sum solver/: Makefile  main.c  subset_sum_problem.c  subset_sum_problem.h
cpp/timeSerie/: Makefile
cpp/timeSerie/sources/: main.cpp  sparseTimeSerie.hpp  timeSerie.hpp
cpp/wordGenerator/: Makefile  wordGenerator  wordGenerator.cpp  wordGenerator.h
dataStructure/: pile.cpp
gnuplot/: experiment.gnu
installation script/: configuration-debian9.sh  install-docker-ce.sh  install-python.sh  install-srv.sh  nftables.conf  software.sh
java/helloWorld/: CMakeLists.txt  Makefile
java/helloWorld/sources/mypackage/: Main.java  Queue.java  Stack.java
java/helloWorld/tests-unitaires/: QueueTest.java  StackTest.java
js/: canvas move bull.html
python/: async.py  client_mongodb.py  helloworld.py  managerRun  plot.py  qrcode.py
python/bookmarks_jsonToHtml/: cppreference.py
